--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
     
 
       <div class="container-fluid">
-        <div class="row p-5 bg-dark text-white">
-
+        <div class="row p-5 bg-dark text-white text-center">
           <div class="col-xs-12 col-md-6 col-lg-3">
             <p class="h3">Columna </p>
             <p class="text-secondary">Cancún, Q.R</p>
