--- a/index.html
+++ b/index.html
@@ -38,16 +38,19 @@
         <div class="mx-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="#nosotros">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white h5" href="#mision-vision">Misión y vision</a>
+            <a class="nav-link text-white h5" href="#quienes_somos">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white h5" href="#servicios">Servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="#test-marcas">Testimonios y marcas</a>
+            <a class="nav-link text-white h5" href="#clientes">Nuestros clientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white h5" href="#beneficios">Beneficios para ti</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white h5" href="#idioma">Idioma</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white h5" href="#contacto">Contácto</a>
@@ -59,7 +62,7 @@
 
   <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active btn text-white" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
@@ -139,75 +142,134 @@
   <!-- =================== FINALIZA CAROUSEL =============== -->
 
 
-        <!--========== INICIAN SECCIONES ==========-->
+        <!--==================== INICIAN SECCIONES =====================-->
 
 
-  <!--========== SECCIÓN NOSOTROS ==========-->
+  <!--========== SECCIÓN ¿QUIÉNES SOMOS? ==========-->
 
- <main>
-    <section class="" id="nosotros">
+<div class="wrapper">
+  <main>
+    <section class="" id="quienes_somos">
         <div class="container">
             <div class="row">
-                <div class="col-md">
-                    <h2 class="section-title">Nosotros</h2>
+                <div class="col-xs-12 col-sm-12 col-md-6 wow fadeInDown" data-wow-delay=".5s"
+                  style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
+                    <h2 class="section-title">¿Quiénes somos?</h2>
+                    <p>Somos una Firma especializada en la administración 
+                      integral de capital humano, fundada el 31 de agosto de 2006.</p>
+                    <p>Brindamos asesoría en materia de atracción y retención de talento, 
+                      capacitación, retribución, evaluación de desempeño, clima laboral y 
+                      desarrollo de capital humano, en forma personalizada y en un ambiente 
+                      de cordialidad, asegurando con ello una relación confiable y duradera 
+                      con nuestros clientes.</p>
+                    <p>A través de nuestras oficinas y enlaces, imprimimos proyección global
+                       a nuestros servicios.</p>
+
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 wow fadeInRight" data-wow-delay=".5s"
+                  style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInRight;">
+                  <img src="assets/img/asesoria.jpg" style="height: 500px; padding-top: 10px;">
                 </div>
             </div>
         </div>
     </section>
 
-    <!--========== SECCION MISIÓN Y VISIÓN ==========-->
+    <!--========== SECCION SERVICIOS  ==========-->
 
-    <section class="" id="mision-vision">
+    <section class="" id="servicios">
         <div class="container">
           <div class="row">
               <div class="col-md">
-                  <h2 class="section-title">Misión</h2>
+                  <h2 class="section-title">Servicios</h2>
               </div>
           </div>
-          <div class="row">
-            <div class="col-md">
-                <h2 class="section-title">Visión</h2>
+          <div class="section-title">
+            <h2>
+              Conozca nuestra gama de servicios y añada valor a
+              su negocio.
+            </h2>
+          </div>
+          <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
+            <div class="content d-flex flex-column text-center" style="font-size: 150px;">
+              <img src="assets/img/servicios/nomina.png" class="img-fluid">
             </div>
-        </div>
-        </div>
-    </section>
+          </div>
+          <div>
+            <h2>Brindamos la seguridad de retribuir al capital humano
+            </h2>
+          </div>
 
-     <!--========== SECCION SERVICIOS ==========-->
-
-    <section class="" id="servicios">
-      <div class="container">
-        <div class="row">
-            <div class="col-md">
-                <h2 class="section-title">Servicios</h2>
+          <br>
+          <br>
+          <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
+            <div class="content d-flex flex-column text-center" style="font-size: 150px;">
+              <img src="assets/img/servicios/laboral.png" class="img-fluid">
             </div>
-        </div>
-      </div>
-    </section>
+          </div>
 
-     <!--========== SECCION TESTIMONIOS Y MARCAS ==========-->
-
-    <section class="" id="test-marcas">
-      <div class="container">
-        <div class="row">
-            <div class="col-md">
-                <h2 class="section-title">Testimonios</h2>
+          <br>
+          <br>
+          <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
+            <div class="content d-flex flex-column text-center" style="font-size: 150px;">
+              <img src="assets/img/servicios/seleccion.png" class="img-fluid">
             </div>
-        </div>
-        <div class="row">
-          <div class="col-md">
-              <h2 class="section-title">Marcas</h2>
+          </div>
+
+          <br>
+          <br>
+          <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
+            <div class="content d-flex flex-column text-center" style="font-size: 150px;">
+              <img src="assets/img/servicios/capacita.png" class="img-fluid">
+            </div>
+          </div>
+
+          <br>
+          <br>
+          <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
+            <div class="content d-flex flex-column text-center" style="font-size: 150px;">
+              <img src="assets/img/servicios/consultor.png" class="img-fluid">
+            </div>
           </div>
         </div>
+    </section>
+
+    <!--========== SECCION NUESTROS CLIENTES ==========-->
+
+    <section class="" id="clientes">
+      <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <h2 class="section-title">Nuestros clientes</h2>
+            </div>
+        </div>
       </div>
     </section>
 
-     <!--========== SECCION CONTACTO ==========-->
+    <!--========== SECCION BENEFICIOS PARA TI ==========-->
+
+    <section class="" id="beneficios">
+      <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <h2 class="section-title">Beneficios para ti</h2>
+            </div>
+        </div>
+      </div>
+    </section>
+
+    <!--========== SECCION IDIOMAS ==========-->
+
+    <section>
+    
+    </section>
+
+    <!--========== SECCIÓN CONTÁCTO ==========-->
 
     <section class="" id="contacto">
       <div class="container">
         <div class="row">
             <div class="col-md">
-                <h2 class="section-title">Contacto</h2>
+                <h2 class="section-title">Contácto</h2>
             </div>
         </div>
       </div>
@@ -221,7 +283,9 @@
         </div>
       </div>
     </section>-->
- </main> 
+  </main> 
+</div>
+ 
 
       <!--========== Script NavBar ==========-->
   
