Botones flotantes y secciones

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo.png" alt="..." width="80" height="60" class="d-inline-block align-text-top">
+        <img src="assets/img/logo.png" alt="..." class="d-inline-block align-text-top img-logo">
       </a>
       <button
         class="navbar-toggler"
@@ -68,7 +68,50 @@
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
 
+    <!-- =================== INICIO DE BOTONES FLOTANTES =============== -->
 
+  <div class="container btn-flot ">
+    <a href="#">
+      <div class="btn-1 bg-primary bg-opacity-50"> 
+        <h5 class="text-center text-white">Reclutar y seleccionar</h5>
+        <h5 class="text-center text-white"> personal</h5>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="btn-2 bg-light bg-opacity-50"> 
+        <h5 class="text-center text-primary">Atender una</h5>
+        <h5 class="text-center text-primary"> demanda laboral</h5>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="btn-3 bg-primary bg-opacity-50"> <br>
+        <h5 class="text-center text-white">Elaborar tu nomina</h5>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="btn-4 bg-light bg-opacity-50">
+        <h5 class="text-center text-primary">Capacitar y actualizar</h5>
+        <h5 class="text-center text-primary"> a tu capital humano</h5>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="btn-5 bg-primary bg-opacity-50">
+        <h5 class="text-center text-white">Asesoría en finanzas,</h5>
+        <h5 class="text-center text-white">impuestos y más</h5>
+      </div>
+    </a>
+
+    <a href="#">
+      <div class="btn-6 bg-primary bg-opacity-50">
+        <h5 class="text-center text-white">Reserva una cita de</h5>
+        <h5 class="text-center text-white">orientación sin costo</h5>
+      </div>
+    </a>
+  </div>
 
 
 
@@ -147,11 +190,10 @@
 
   <!--========== SECCIÓN ¿QUIÉNES SOMOS? ==========-->
 
-<div class="wrapper">
-  <main>
+  <main class="container-fluid home-main">
     <section class="" id="quienes_somos">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-xs-12 col-sm-12 col-md-6 wow fadeInDown" data-wow-delay=".5s"
                   style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
                     <h2 class="section-title">¿Quiénes somos?</h2>
@@ -168,7 +210,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6 wow fadeInRight" data-wow-delay=".5s"
                   style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInRight;">
-                  <img src="assets/img/asesoria.jpg" style="height: 500px; padding-top: 10px;">
+                  <img src="assets/img/asesoria.jpg" class="image-asesoria text-center">
                 </div>
             </div>
         </div>
@@ -189,26 +231,34 @@
               su negocio.
             </h2>
           </div>
+          <div>
+            <h2>Brindamos la seguridad de retribuir al capital humano
+            </h2>
+          </div>
           <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
             <div class="content d-flex flex-column text-center" style="font-size: 150px;">
               <img src="assets/img/servicios/nomina.png" class="img-fluid">
             </div>
           </div>
+          
+          <br>
+          <br>
           <div>
-            <h2>Brindamos la seguridad de retribuir al capital humano
+            <h2>Apoyamos a nuestros clientesen la atracción y retención de talento
             </h2>
           </div>
-
-          <br>
-          <br>
           <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
             <div class="content d-flex flex-column text-center" style="font-size: 150px;">
               <img src="assets/img/servicios/laboral.png" class="img-fluid">
             </div>
           </div>
-
+   
           <br>
           <br>
+          <div>
+            <h2>Nuestro método de capacitación pone en práctica la teoría aprendida
+            </h2>
+          </div>
           <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
             <div class="content d-flex flex-column text-center" style="font-size: 150px;">
               <img src="assets/img/servicios/seleccion.png" class="img-fluid">
@@ -217,6 +267,10 @@
 
           <br>
           <br>
+          <div>
+            <h2>Mejoramos el posicionamiento de nuestros clientes
+            </h2>
+          </div>
           <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
             <div class="content d-flex flex-column text-center" style="font-size: 150px;">
               <img src="assets/img/servicios/capacita.png" class="img-fluid">
@@ -225,6 +279,10 @@
 
           <br>
           <br>
+          <div>
+            <h2>Administración de capital humano que genera valor y confianza
+            </h2>
+          </div>
           <div class="col-md-3 d-flex align-items-stretch aos-init aos-animate" style="font-size: 150px;">
             <div class="content d-flex flex-column text-center" style="font-size: 150px;">
               <img src="assets/img/servicios/consultor.png" class="img-fluid">
@@ -242,6 +300,12 @@
                 <h2 class="section-title">Nuestros clientes</h2>
             </div>
         </div>
+        <div class="section-title">
+          <h2>
+            Conozca nuestra gama de servicios y añada valor a
+            su negocio.
+          </h2>
+        </div> 
       </div>
     </section>
 
@@ -253,6 +317,15 @@
             <div class="col-md">
                 <h2 class="section-title">Beneficios para ti</h2>
             </div>
+        </div>
+        <div class="section-title">
+          <h2>
+            ¿QUÉ OFRECEMOS?
+          </h2>
+        </div>
+        <div>
+          Ofrecemos respuestas que marcan la diferencia en favor
+           de nuestros clientes y sus colaboradores
         </div>
       </div>
     </section>
@@ -284,7 +357,7 @@
       </div>
     </section>-->
   </main> 
-</div>
+
  
 
       <!--========== Script NavBar ==========-->
@@ -347,7 +420,7 @@
               <i class="fas fa-gem me-3"></i>Grupo ábaco
             </h6>
             <p>
-              <img src="assets/img/logo.png" alt="..." width="120" height="100">
+              <img src="assets/img/logo.png" alt="..."  class="align-text-top img-logo">
             </p>
         </div>
 
