href de dos botones

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
     </a>
 
-    <a href="#">
+    <a href="servicios.html">
       <div class="btn-3 bg-primary bg-opacity-50"> <br>
         <h5 class="text-center text-white">Elaborar tu nomina</h5>
       </div>
@@ -105,7 +105,7 @@
       </div>
     </a>
 
-    <a href="#">
+    <a href="contacto.html">
       <div class="btn-6 bg-primary bg-opacity-50">
         <h5 class="text-center text-white">Reserva una cita de</h5>
         <h5 class="text-center text-white">orientación sin costo</h5>
