--- a/beneficios.html
+++ b/beneficios.html
@@ -12,7 +12,7 @@
     
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Document</title>
+    <title>Beneficios para ti | Grupo Ábaco</title>
 </head>
 <body>
 
