--- a/index.html
+++ b/index.html
@@ -72,43 +72,44 @@
 
   <div class="container btn-flot ">
     <a href="#">
-      <div class="btn-1 bg-primary bg-opacity-50"> 
-        <h5 class="text-center text-white">Reclutar y seleccionar</h5>
-        <h5 class="text-center text-white"> personal</h5>
+      <div class="btn-1 bg-primary bg-opacity-50 d-flex flex-column align-items-center justify-content-center"> 
+        <h5 class="text-center text-white mb-0">Reclutar y seleccionar</h5>
+        <h5 class="text-center text-white mb-md-0"> personal</h5>
       </div>
     </a>
 
     <a href="#">
-      <div class="btn-2 bg-light bg-opacity-50"> 
-        <h5 class="text-center text-primary">Atender una</h5>
-        <h5 class="text-center text-primary"> demanda laboral</h5>
+      <div class="btn-2 bg-light bg-opacity-50 d-flex flex-column align-items-center justify-content-center"> 
+        <h5 class="text-center text-primary mb-0">Atender una</h5>
+        <h5 class="text-center text-primary mb-0"> demanda laboral</h5>
       </div>
     </a>
 
     <a href="servicios.html">
-      <div class="btn-3 bg-primary bg-opacity-50"> <br>
+      <div class="btn-3 bg-primary bg-opacity-50 d-flex align-items-center justify-content-center"> 
         <h5 class="text-center text-white">Elaborar tu nomina</h5>
       </div>
     </a>
 
     <a href="#">
-      <div class="btn-4 bg-light bg-opacity-50">
-        <h5 class="text-center text-primary">Capacitar y actualizar</h5>
-        <h5 class="text-center text-primary"> a tu capital humano</h5>
+      <div class="btn-4 bg-light bg-opacity-50 d-flex flex-column align-items-center justify-content-center">
+        <h5 class="text-center text-primary mb-0">Capacitar y actualizar</h5>
+        <h5 class="text-center text-primary mb-0"> a tu capital humano</h5>
       </div>
     </a>
 
     <a href="#">
-      <div class="btn-5 bg-primary bg-opacity-50">
-        <h5 class="text-center text-white">Asesoría en finanzas,</h5>
-        <h5 class="text-center text-white">impuestos y más</h5>
+      <div class="btn-5 bg-primary bg-opacity-50 d-flex flex-column align-items-center justify-content-center">
+        <h5 class="text-center text-white mb-0">Asesoría en finanzas,</h5>
+        <h5 class="text-center text-white mb-0">impuestos y más</h5>
       </div>
     </a>
 
     <a href="contacto.html">
-      <div class="btn-6 bg-primary bg-opacity-50">
-        <h5 class="text-center text-white">Reserva una cita de</h5>
-        <h5 class="text-center text-white">orientación sin costo</h5>
+      <div class="btn-6 bg-primary bg-opacity-50 click-btn d-flex flex-column align-items-center justify-content-center">
+        <h5 class="text-center text-white mb-0">Reserva una cita de</h5>
+        <h5 class="text-center text-white mb-0">orientación sin costo</h5>
+        <iconify-icon class="iconify-click" icon="mdi:cursor-default-click-outline" width="80"></iconify-icon>
       </div>
     </a>
 
@@ -124,7 +125,9 @@
   <div class="container-fluid d-grid info-hero gap-4">
     <div class="container dudas-info">
       <h5 class="text-white">¿DUDAS?</h5> 
-       <a href="#"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+       <a href="https://api.whatsapp.com/send?phone=+529981131050&text=Hola,%20me%20gustar%C3%ADa%20recibir%20m%C3%A1s%20informaci%C3%B3n%20acerca%20de%20sus%20servicios%20">
+        <i class="fa-brands fa-whatsapp fa-2xl"></i>
+        </a>
     </div>
     <div class="container d-grid social-info">
       <h4 class="text-white">¡Visítanos!</h4>
@@ -166,6 +169,7 @@
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
       <script src="https://kit.fontawesome.com/3c4b267993.js" crossorigin="anonymous"></script>
+      <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 
 </body>
 </html>
