Posicion de iconos de redes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </a>
 
-    <div class="conteiner necesitas text-white">
+    <div class="container necesitas text-white">
       <p>¿Necesitas?</p>
     </div>
   </div>
@@ -124,18 +124,18 @@
 
   <div class="container-fluid d-grid info-hero gap-4">
     <div class="container dudas-info">
-      <h5 class="text-white">¿DUDAS?</h5> 
+      <p class="dudas text-white">¿DUDAS?</p> 
        <a href="https://api.whatsapp.com/send?phone=+529981131050&text=Hola,%20me%20gustar%C3%ADa%20recibir%20m%C3%A1s%20informaci%C3%B3n%20acerca%20de%20sus%20servicios%20">
-        <i class="fa-brands fa-whatsapp fa-2xl"></i>
+        <i class="fa-brands fa-whatsapp fa-4x"></i>
         </a>
     </div>
-    <div class="container d-grid social-info">
-      <h4 class="text-white">¡Visítanos!</h4>
+    <div class="container social-info">
+      <p class=" visitanos text-white">¡Visítanos!</p>
       <a href="https://www.facebook.com/GrupoAbacoOficial/">
-        <i class="fa-brands fa-facebook fa-2xl my-4"></i>
+        <i class="fa-brands fa-facebook fa-4x my-4"></i>
       </a>
       <a href="#">
-        <i class="fa-brands fa-instagram fa-2xl my-4"></i>
+        <i class="fa-brands fa-instagram fa-instagram-2 fa-4x my-4"></i>
       </a>  
     </div>
   </div>
