--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -94,14 +94,27 @@
     <section class="section-sp section-bg">
         <div class="container">
             <h1>¿Qué ofrecemos?</h1>
+            <p class="text-center">
+                Ofrecemos respuestas que marcan la diferencia en favor de nuestros clientes y sus colaboradores:
+            </p>    
+            <div class="row">
+                <div class="col-md-4 d-flex align-items-stretch aos-init aos-animate">
+                    <div class="content d-flex flex-column text-center" style="font-size: 150px;">
+                        <img src="assets/img/colaboration.jpg" class="img-fluid" alt="...">
+                    </div>
+                </div>
+            </div>
         </div>
-        <p class="text-center">
-            Ofrecemos respuestas que marcan la diferencia en favor de nuestros clientes y sus colaboradores:
-        </p>
     </section>
 
-    <section>
+    <section class="section-sp">
+        <div class="container">
+            <h1>Misión</h1>
+            <p class="text-center">
+                Generar soluciones para nuestros clientes y beneficios a sus colaboradores
+            </p>
 
+        </div>
     </section>
 
 
