--- a/contacto.html
+++ b/contacto.html
@@ -129,19 +129,19 @@
                 Links
                 </h6>
                 <p>
-                <a href="#" class="text-reset text-decoration-none">Nosotros</a>
+                <a href="quienes_somos.html" class="text-reset text-decoration-none">¿Quiénes somos?</a>
                 </p>
                 <p>
-                <a href="#" class="text-reset text-decoration-none">Misión-visión</a>
+                <a href="servicios.html" class="text-reset text-decoration-none">Servicios</a>
                 </p>
                 <p>
-                <a href="#" class="text-reset text-decoration-none">Servicios</a>
+                <a href="clientes.html" class="text-reset text-decoration-none">Nuestros clientes</a>
                 </p>
                 <p>
-                <a href="#" class="text-reset text-decoration-none">Testimonios/marcas</a>
+                <a href="beneficios.html" class="text-reset text-decoration-none">Beneficios para ti</a>
                 </p>
                 <p>
-                <a href="#" class="text-reset text-decoration-none">Contacto</a>
+                <a href="contacto.html" class="text-reset text-decoration-none">Contácto</a>
                 </p>
             </div>
 
