--- a/beneficios.html
+++ b/beneficios.html
@@ -43,9 +43,6 @@
                     <a class="nav-link text-white h5" href="quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link text-white h5" href="clientes.html">Nuestros clientes</a>
                 </li>
                 <li class="nav-item">
@@ -65,24 +62,13 @@
 
         <!-- =================== FIN DE NAVBAR =============== -->
 
-    <section class="" id="beneficios">
-        <div class="container">
-          <div class="row">
-              <div class="col-md">
-                  <h2 class="section-title">Beneficios para ti</h2>
-              </div>
+
+
+        <!-- =================== BACKGROUND =============== -->
+        <div class="bg-img">
+            <img src="assets/img/background.jpg" class="d-block w-100" alt="...">
           </div>
-          <div class="section-title">
-            <h2>
-              ¿QUÉ OFRECEMOS?
-            </h2>
-          </div>
-          <div>
-            Ofrecemos respuestas que marcan la diferencia en favor
-             de nuestros clientes y sus colaboradores
-          </div>
-        </div>
-      </section>
+          
 
           <!--========== Inicia Footer ==========-->
     
@@ -138,9 +124,6 @@
                 </h6>
                 <p>
                 <a href="quienes_somos.html" class="text-reset text-decoration-none">¿Quiénes somos?</a>
-                </p>
-                <p>
-                <a href="servicios.html" class="text-reset text-decoration-none">Servicios</a>
                 </p>
                 <p>
                 <a href="clientes.html" class="text-reset text-decoration-none">Nuestros clientes</a>
