--- a/clientes.html
+++ b/clientes.html
@@ -42,9 +42,6 @@
                     <a class="nav-link text-white h5" href="quienes_somos.html">¿Quiénes somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white h5" href="servicios.html">Servicios</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link text-white h5" href="clientes.html">Nuestros clientes</a>
                 </li>
                 <li class="nav-item">
@@ -65,21 +62,10 @@
         <!-- =================== FIN DE NAVBAR =============== -->
 
 
-    <section class="" id="clientes">
-        <div class="container">
-          <div class="row">
-              <div class="col-md">
-                  <h2 class="section-title">Nuestros clientes</h2>
-              </div>
-          </div>
-          <div class="section-title">
-            <h2>
-              Conozca nuestra gama de servicios y añada valor a
-              su negocio.
-            </h2>
-          </div> 
-        </div>
-      </section>
+  <!-- =================== BACKGROUND =============== -->
+  <div class="bg-img">
+    <img src="assets/img/background.jpg" class="d-block w-100" alt="...">
+  </div>
 
 
           <!--========== Inicia Footer ==========-->
@@ -138,16 +124,13 @@
                         <a href="quienes_somos.html" class="text-reset text-decoration-none">¿Quiénes somos?</a>
                         </p>
                         <p>
-                        <a href="servicios.html" class="text-reset text-decoration-none">Servicios</a>
-                        </p>
-                        <p>
                         <a href="clientes.html" class="text-reset text-decoration-none">Nuestros clientes</a>
                         </p>
                         <p>
                         <a href="beneficios.html" class="text-reset text-decoration-none">Beneficios para ti</a>
                         </p>
                         <p>
-                        <a href="contacto.html" class="text-reset text-decoration-none">Contácto</a>
+                        <a href="contacto.html  " class="text-reset text-decoration-none">Contácto</a>
                         </p>
                     </div>
 
