--- a/contacto.html
+++ b/contacto.html
@@ -43,9 +43,6 @@
                 <a class="nav-link text-white h5" href="quienes_somos.html">¿Quiénes somos?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white h5" href="servicios.html">Servicios</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link text-white h5" href="clientes.html">Nuestros clientes</a>
               </li>
               <li class="nav-item">
@@ -65,16 +62,12 @@
 
     <!-- =================== FIN DE NAVBAR =============== -->
 
-    
-    <section class="" id="contacto">
-        <div class="container">
-          <div class="row">
-              <div class="col-md">
-                  <h2 class="section-title">Contácto</h2>
-              </div>
-          </div>
+
+        <!-- =================== BACKGROUND =============== -->
+        <div class="bg-img">
+          <img src="assets/img/background.jpg" class="d-block w-100" alt="...">
         </div>
-      </section>
+
 
           <!--========== Inicia Footer ==========-->
     
@@ -130,9 +123,6 @@
                 </h6>
                 <p>
                 <a href="quienes_somos.html" class="text-reset text-decoration-none">¿Quiénes somos?</a>
-                </p>
-                <p>
-                <a href="servicios.html" class="text-reset text-decoration-none">Servicios</a>
                 </p>
                 <p>
                 <a href="clientes.html" class="text-reset text-decoration-none">Nuestros clientes</a>
