--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
             <a class="nav-link text-white h5" href="quienes_somos.html">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="servicios.html">Servicios</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link text-white h5" href="clientes.html">Nuestros clientes</a>
           </li>
           <li class="nav-item">
@@ -65,79 +62,69 @@
       <!-- =================== FIN DE NAVBAR =============== -->
 
 
-  <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel" data-bs-ride="carousel">
 
 
-    <!-- =================== INICIO DE BOTONES FLOTANTES =============== -->
+    <!-- =================== INICIO DE MENÚ DE BOTONES FLOTANTES =============== -->
 
-  <div class="container btn-flot ">
-    <a href="#">
-      <div class="btn-1 bg-primary bg-opacity-50 d-flex flex-column align-items-center justify-content-center"> 
-        <h5 class="text-center text-white mb-0">Reclutar y seleccionar</h5>
-        <h5 class="text-center text-white mb-md-0"> personal</h5>
+ 
+      <div class="container">
+        <img src="assets/img/MENÚ.png" alt="..."  class="img-fluid img-menu" alt="Responsive image">
       </div>
-    </a>
-
-    <a href="#">
-      <div class="btn-2 bg-light bg-opacity-50 d-flex flex-column align-items-center justify-content-center"> 
-        <h5 class="text-center text-primary mb-0">Atender una</h5>
-        <h5 class="text-center text-primary mb-0"> demanda laboral</h5>
+      <div class="container">
+        <a href="">
+          <img src="assets/img/menu_partes/atender.png" alt="..." class="img-atender btn-1">
+        </a>
+        <a href="">
+          <img src="assets/img/menu_partes/elaborar.png" alt="..." class="img-elaborar btn-1">
+        </a>
+        <a href="">
+          <img src="assets/img/menu_partes/reclutar.png" alt="..." class="img-reclutar btn-1">
+        </a>
+        <a href="">
+          <img src="assets/img/menu_partes/capacitar.png" alt="..." class="img-capacitar btn-1">
+        </a>
+        <a href="">
+          <img src="assets/img/menu_partes/asesoria.png" alt="..." class="img-asesoria btn-1">
+        </a>
+        <a href="">
+          <img src="assets/img/menu_partes/desarrollo.png" alt="..." class="img-desarrollo btn-1">
+        </a>
       </div>
-    </a>
 
-    <a href="servicios.html">
-      <div class="btn-3 bg-primary bg-opacity-50 d-flex align-items-center justify-content-center"> 
-        <h5 class="text-center text-white">Elaborar tu nomina</h5>
-      </div>
-    </a>
 
-    <a href="#">
-      <div class="btn-4 bg-light bg-opacity-50 d-flex flex-column align-items-center justify-content-center">
-        <h5 class="text-center text-primary mb-0">Capacitar y actualizar</h5>
-        <h5 class="text-center text-primary mb-0"> a tu capital humano</h5>
-      </div>
-    </a>
+    <!-- =================== IMG SECRETARIA =============== -->
 
-    <a href="#">
-      <div class="btn-5 bg-primary bg-opacity-50 d-flex flex-column align-items-center justify-content-center">
-        <h5 class="text-center text-white mb-0">Asesoría en finanzas,</h5>
-        <h5 class="text-center text-white mb-0">impuestos y más</h5>
-      </div>
-    </a>
-
-    <a href="contacto.html">
-      <div class="btn-6 bg-primary bg-opacity-50 click-btn d-flex flex-column align-items-center justify-content-center">
-        <h5 class="text-center text-white mb-0">Reserva una cita de</h5>
-        <h5 class="text-center text-white mb-0">orientación sin costo</h5>
-        <iconify-icon class="iconify-click" icon="mdi:cursor-default-click-outline" width="80"></iconify-icon>
-      </div>
-    </a>
-
-    <div class="container necesitas text-white">
-      <p>¿Necesitas?</p>
+    <div>
+      <img src="assets/img/mujer_1.png" alt="..." class="img-fluid img-sec">
     </div>
-  </div>
-
 
 
     <!-- =================== INICIO DE INFO EN HERO =============== -->
 
   <div class="container-fluid d-grid info-hero gap-4">
     <div class="container dudas-info">
-      <p class="dudas text-white">¿DUDAS?</p> 
+      <p class="dudas text-white">
+        <strong>
+          ¡Asesoría a un click <br> de distancia!
+        </strong>
+        </p>
        <a href="https://api.whatsapp.com/send?phone=+529981131050&text=Hola,%20me%20gustar%C3%ADa%20recibir%20m%C3%A1s%20informaci%C3%B3n%20acerca%20de%20sus%20servicios%20">
         <i class="fa-brands fa-whatsapp fa-4x"></i>
         </a>
     </div>
-    <div class="container social-info">
-      <p class=" visitanos text-white">¡Visítanos!</p>
-      <a href="https://www.facebook.com/GrupoAbacoOficial/">
-        <i class="fa-brands fa-facebook fa-4x my-4"></i>
+  </div>
+
+  <div class="container-fluid d-grid container social-info icon-redes">
+    <a href="https://www.facebook.com/GrupoAbacoOficial/">
+      <i class="fa-brands fa-facebook fa-2x my-4"></i>
+    </a>
+    <a href="https://www.instagram.com/explore/locations/176755589021302/grupo-abaco/?hl=es-la">
+      <i class="fa-brands fa-instagram fa-instagram-2 fa-2x my-4"></i>
+    </a>
+    <a href="https://www.linkedin.com/company/grupo-%C3%A1baco-oficial/" class="me-4 text-reset">
+      <i class="fa-brands fa-linkedin fa-linkedin-2 fa-2x my-4"></i>
       </a>
-      <a href="https://www.instagram.com/explore/locations/176755589021302/grupo-abaco/?hl=es-la">
-        <i class="fa-brands fa-instagram fa-instagram-2 fa-4x my-4"></i>
-      </a>  
-    </div>
   </div>
 
     <!-- =================== BACKGROUND =============== -->
