--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   
     <!-- =================== NAVBAR =============== -->
 
+   
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
     <div class="container">
       <a class="navbar-brand" href="index.html">
@@ -69,7 +70,7 @@
 
  
       <div class="container">
-        <img src="assets/img/MENÚ.png" alt="..."  class="img-fluid img-menu" alt="Responsive image">
+        <img src="assets/img/menu_partes/img_central.png" alt="..."  class="img-fluid img-menu" alt="Responsive image">
       </div>
       <div class="container">
         <a href="">
