--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/img/logo.png" alt="..." class="d-inline-block align-text-top img-logo">
+        <img src="assets/img/logo-0.svg" alt="..." class="d-inline-block align-text-top img-logo">
       </a>
       <button
         class="navbar-toggler"
@@ -41,19 +41,19 @@
         <div class="mx-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="quienes_somos.html">¿Quiénes somos?</a>
+            <a class="nav-link text-secondary h5" href="quienes_somos.html">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="clientes.html">Nuestros clientes</a>
+            <a class="nav-link text-secondary h5" href="clientes.html">Nuestros clientes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="beneficios.html">Beneficios para ti</a>
+            <a class="nav-link text-secondary h5" href="beneficios.html">Beneficios para ti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="#idioma">Idioma</a>
+            <a class="nav-link text-secondary h5" href="#idioma">Idioma</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white h5" href="contacto.html">Contácto</a>
+            <a class="nav-link text-secondary h5" href="contacto.html">Contácto</a>
           </li>
         </ul>
       </div>
@@ -103,7 +103,12 @@
 
     <!-- =================== INICIO DE INFO EN HERO =============== -->
 
+    <div>
+      <img src="assets/img/exposion.gif" alt="" class="explo-img">
+    </div>
+    <div class="circulo circulo-dist"></div>
   <div class="container-fluid d-grid info-hero gap-4">
+ 
     <div class="container dudas-info">
       <p class="dudas text-white">
         <strong>
