Ultima actualizacion logos

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
     </div>
 
 
+    <div>
+      <img src="assets/img/logo2.png" alt="..." class="logo-2">
+    </div>
+
     <!-- =================== INICIO DE INFO EN HERO =============== -->
 
     <div>
@@ -130,9 +134,14 @@
     </a>
     <a href="https://www.linkedin.com/company/grupo-%C3%A1baco-oficial/" class="me-4 text-reset">
       <i class="fa-brands fa-linkedin fa-linkedin-2 fa-2x my-4"></i>
-      </a>
+      </a>      
   </div>
 
+    <p class="text-white g-abaco">
+      <strong>
+        Grupo Ábaco
+      </strong>
+    </p>
     <!-- =================== BACKGROUND =============== -->
       <div class="bg-img">
         <img src="assets/img/background.jpg" class="d-block w-100" alt="...">
