--- a/index.html
+++ b/index.html
@@ -41,22 +41,30 @@
         <div class="mx-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-secondary h5" href="quienes_somos.html">¿Quiénes somos?</a>
+            <a class="nav-link text-secondary h4" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-secondary h4" href="quienes_somos.html">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-secondary h5" href="clientes.html">Nuestros clientes</a>
           </li>
+          <li class=""></li>
           <li class="nav-item">
             <a class="nav-link text-secondary h5" href="beneficios.html">Beneficios para ti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary h5" href="#idioma">Idioma</a>
+            <a class="nav-link text-secondary h5" href="contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary h5" href="contacto.html">Contácto</a>
+            <a class="nav-link text-secondary h5" href="#idioma">Languages</a>
           </li>
         </ul>
       </div>
+        <div class="navbar-brand">
+          <img class="bandera-eua" src="assets/img/banderas/eua.svg" alt="...">
+          <img class="bandera-eua" src="assets/img/banderas/mx.svg" alt="">
+        </div>
     </div>
   </nav>
 
@@ -68,14 +76,17 @@
 
     <!-- =================== INICIO DE MENÚ DE BOTONES FLOTANTES =============== -->
 
- 
-      <div class="container">
-        <img src="assets/img/menu_partes/img_central.png" alt="..."  class="img-fluid img-menu" alt="Responsive image">
-      </div>
-      <div class="container">
+      <div class="container container-menu">
+        <div>
+          <img src="assets/img/menu_partes/img_central.png" alt="..."  class="img-menu" alt="Responsive image">
+        </div>
         <a href="">
           <img src="assets/img/menu_partes/atender.png" alt="..." class="img-atender btn-1">
         </a>
+        <g id="UnoS9fTmG2QdvAJF" style="transform:scale(3) translate(0px, 0.5px);">
+          <line x1="0.5" x2="7.13067028" y1="0" y2="0" style="fill:none;stroke-linecap:round;">
+          </line>
+          </g>
         <a href="">
           <img src="assets/img/menu_partes/elaborar.png" alt="..." class="img-elaborar btn-1">
         </a>
@@ -110,9 +121,7 @@
     <div>
       <img src="assets/img/exposion.gif" alt="" class="explo-img">
     </div>
-    <div class="circulo circulo-dist"></div>
   <div class="container-fluid d-grid info-hero gap-4">
- 
     <div class="container dudas-info">
       <p class="dudas text-white">
         <strong>
@@ -120,28 +129,35 @@
         </strong>
         </p>
        <a href="https://api.whatsapp.com/send?phone=+529981131050&text=Hola,%20me%20gustar%C3%ADa%20recibir%20m%C3%A1s%20informaci%C3%B3n%20acerca%20de%20sus%20servicios%20">
-        <i class="fa-brands fa-whatsapp fa-4x"></i>
+        <img src="assets/img/whats.png" alt="..." class="whats-icon">
         </a>
     </div>
   </div>
 
-  <div class="container-fluid d-grid container social-info icon-redes">
-    <a href="https://www.facebook.com/GrupoAbacoOficial/">
-      <i class="fa-brands fa-facebook fa-2x my-4"></i>
-    </a>
-    <a href="https://www.instagram.com/explore/locations/176755589021302/grupo-abaco/?hl=es-la">
-      <i class="fa-brands fa-instagram fa-instagram-2 fa-2x my-4"></i>
-    </a>
-    <a href="https://www.linkedin.com/company/grupo-%C3%A1baco-oficial/" class="me-4 text-reset">
-      <i class="fa-brands fa-linkedin fa-linkedin-2 fa-2x my-4"></i>
-      </a>      
+  <div>
+    <a class="text-white aviso-priv" href="#">Aviso de privacidad</a>
   </div>
 
-    <p class="text-white g-abaco">
-      <strong>
-        Grupo Ábaco
-      </strong>
-    </p>
+  <div>
+    <div class="container-fluid d-grid container social-info icon-redes">
+      <a href="https://www.facebook.com/GrupoAbacoOficial/">
+        <i class="fa-brands fa-facebook fa-2x my-4"></i>
+      </a>
+      <a href="https://www.linkedin.com/company/grupo-%C3%A1baco-oficial/" class="me-4 text-reset">
+        <i class="fa-brands fa-linkedin fa-linkedin-2 fa-2x my-4"></i>
+      </a> 
+      <a href="https://www.instagram.com/explore/locations/176755589021302/grupo-abaco/?hl=es-la">
+        <i class="fa-brands fa-instagram fa-instagram-2 fa-2x my-4"></i>
+      </a>    
+    </div>
+      <p class="text-white text-abaco">
+        <strong>
+          Grupo Ábaco
+        </strong>
+      </p>
+  </div>
+
+ 
     <!-- =================== BACKGROUND =============== -->
       <div class="bg-img">
         <img src="assets/img/background.jpg" class="d-block w-100" alt="...">
