Actualización home page 2

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
         <div class="navbar-brand">
           <img class="bandera-eua" src="assets/img/banderas/eua.svg" alt="...">
-          <img class="bandera-eua" src="assets/img/banderas/mx.svg" alt="">
+          <img class="bandera-mx" src="assets/img/banderas/mx.svg" alt="">
         </div>
     </div>
   </nav>
