Seccion de nominas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link text-secondary h4" href="quienes_somos.html">¿Quiénes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary h5" href="clientes.html">Nuestros clientes</a>
+            <a class="nav-link text-secondary h5" href="clientes.html">Nuestros Clientes</a>
           </li>
           <li class=""></li>
           <li class="nav-item">
@@ -83,11 +83,13 @@
         <a href="">
           <img src="assets/img/menu_partes/atender.png" alt="..." class="img-atender btn-1">
         </a>
-        <g id="UnoS9fTmG2QdvAJF" style="transform:scale(3) translate(0px, 0.5px);">
+        <!--
+           <g id="UnoS9fTmG2QdvAJF" style="transform:scale(3) translate(0px, 0.5px);">
           <line x1="0.5" x2="7.13067028" y1="0" y2="0" style="fill:none;stroke-linecap:round;">
           </line>
           </g>
-        <a href="">
+        -->       
+        <a href="menu_pages/elaborar.html">
           <img src="assets/img/menu_partes/elaborar.png" alt="..." class="img-elaborar btn-1">
         </a>
         <a href="">
