--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -20,7 +20,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
             <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logo.png" alt="..." class="d-inline-block align-text-top img-logo">
+                <img src="assets/img/logo-0.svg" alt="..." class="d-inline-block align-text-top img-logo">
             </a>
             <button
                 class="navbar-toggler"
@@ -38,23 +38,31 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-white h5" href="quienes_somos.html">¿Quiénes somos?</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white h5" href="clientes.html">Nuestros clientes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#beneficios">Beneficios para ti</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#idioma">Idioma</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white h5" href="#contacto">Contácto</a>
-                </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-secondary h4" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-secondary h4" href="quienes_somos.html">¿Quiénes somos?</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-secondary h5" href="clientes.html">Nuestros Clientes</a>
+                  </li>
+                  <li class=""></li>
+                  <li class="nav-item">
+                    <a class="nav-link text-secondary h5" href="beneficios.html">Beneficios para ti</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-secondary h5" href="contacto.html">Contacto</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-secondary h5" href="#idioma">Languages</a>
+                  </li>
                 </ul>
-            </div>
+              </div>
+                <div class="navbar-brand">
+                  <img class="bandera-eua" src="assets/img/banderas/eua.svg" alt="...">
+                  <img class="bandera-mx" src="assets/img/banderas/mx.svg" alt="">
+                </div>
             </div>
         </nav>
     </header>  
